# Landscape

./: .gitignore  .nfs.yaml.swo  CMakeLists.txt  README.md  copy.yaml  create.py  deploy.yaml  fetch_ips.sh  generate_sample.yaml  graphx.yaml  graphxtest1.py  graphxtest2.py  inventory.ini  java.yaml  mpi.yaml  nfs.yaml  runme.sh  scala.yaml  spark.yaml  sparktest.py  swap.yaml  swap2.yaml  test.yaml  valgrind.yaml
experiment/: cluster_hashstream_expr.cpp  cluster_k_connect_expr.cpp  cluster_query_expr.cpp  cluster_speed_expr.cpp  cont_expr.cpp  mpi_curve.cpp  mpi_message_throughput.cpp  multistream_cluster_speed_expr.cpp  parser.py
include/: distributed_worker.h  graph_distrib_update.h  imemstream.h  message_forwarder.h  program_arguments.h  work_distributor.h  worker_cluster.h
k-connectivity/: CMakeLists.txt  README.md
k-connectivity/include/: k_connected_graph.h
k-connectivity/src/: k_connected_graph.cpp  k_connectivity.cpp
plotting/: plot.sh
plotting/latex/: figures.tex  main.tex
src/: distributed_worker.cpp  graph_distrib_update.cpp  message_forwarder.cpp  message_forwarders.cpp  work_distributor.cpp  worker_cluster.cpp
test/: distributed_graph_test.cpp  streamer_bench.cpp  test_MTBinaryGraphStream.cpp
tmp/192.168.0.116/home/ubuntu/sparktest/: test.py  textfile.txt
tools/: ablative_experiment.sh  cluster_basic_init.sh  fetch_ips.sh  hash_streamer.cpp  k_speed_experiment.sh  query_exp.sh  run_exp.sh  run_experiments.sh  scale_experiment.sh  setup_tagged_workers.sh  speed_experiment.sh  to_static.cpp
tools/ansible/: files.yaml  mpi.yaml  ssh.yaml  ssh_key_scanning.sh
tools/aws/: create_storage.sh  create_workers.py  delete_storage.sh  get_instance_id.sh  run_first_n_workers.py  tag_main.sh
tools/streaming/: fast_as_fuck_boiii.cpp  fast_as_fuck_boiii.h  hash_streamer.h  stream_finder.cpp  verify_stream.cpp  wrong_and_fast.cpp  wrong_and_fast.h
tools/streaming/gz_specific/: gz_sequential_group.cpp  gz_sequential_group.h  gz_sequential_streamer.cpp  gz_sequential_streamer.h
